--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Hello World!TTTTTT</h1>
     <div>tana on 11 jaanar 2024</div>
     <div>väga tägtis tekst</div>
+    <a href="https://thk.edupage.org/timetable/view.php?fullscreen=1"></a>
 </body>
 </html>
